# scutclient

./: CMakeLists.txt
openwrt/files/: scutclient.config  scutclient.init
src/: auth.c  auth.h  info.c  info.h  main.c
